Arreglado colapso en comunicaciones

--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "de3333e5",
    "metadata": {
     "scrolled": false
@@ -13,52 +13,29 @@
      "output_type": "stream",
      "text": [
       "Train: 54000 Val:6000 Test:10000\n",
-      "INFO:root:Nodo a la escucha en 127.0.0.1 60430\n",
+      "INFO:root:Nodo a la escucha en 127.0.0.1 52220\n",
       "Train: 54000 Val:6000 Test:10000\n",
-      "INFO:root:Nodo a la escucha en 127.0.0.1 60431\n",
-      "INFO:root:Conexión aceptada con ('127.0.0.1', 60431)\n",
+      "INFO:root:Nodo a la escucha en 127.0.0.1 52221\n",
+      "INFO:root:Conexión aceptada con ('127.0.0.1', 52221)\n",
       "INFO:root:Broadcasting start learning...\n",
-      "INFO:root:Training...\n",
-      "INFO:root:Training...\n",
-      "INFO:root:Model added (1/2)\n",
       "INFO:root:Broadcasting model to all clients...\n",
-      "INFO:root:Model added (1/2)\n",
-      "INFO:root:Broadcasting model to all clients...\n",
-      "INFO:root:Model added (2/2)\n",
-      "INFO:root:Agregating models.\n",
-      "INFO:root:Model added (2/2)\n",
-      "INFO:root:Round 1 of 2 finished. (('127.0.0.1', 60430))\n",
       "INFO:root:Training...\n",
       "INFO:root:Model added (1/2)\n",
       "INFO:root:Broadcasting model to all clients...\n",
-      "INFO:root:Agregating models.\n",
-      "INFO:root:Round 1 of 2 finished. (('127.0.0.1', 60431))\n",
+      "INFO:root:Model initialized\n",
       "INFO:root:Training...\n",
       "INFO:root:Model added (1/2)\n",
-      "INFO:root:Broadcasting model to all clients...\n",
-      "INFO:root:Model added (2/2)\n",
-      "INFO:root:Agregating models.\n",
-      "INFO:root:Round 2 of 2 finished. (('127.0.0.1', 60431))\n",
-      "INFO:root:Finish!!.\n",
-      "INFO:root:Model added (2/2)\n",
-      "INFO:root:Agregating models.\n",
-      "INFO:root:Round 2 of 2 finished. (('127.0.0.1', 60430))\n",
-      "INFO:root:Finish!!.\n",
-      "INFO:root:Bajando el nodo, dejando de escuchar en 127.0.0.1 60430\n",
-      "DEBUG:root:Closed connection: ('127.0.0.1', 60430)\n",
-      "DEBUG:root:Closed connection: ('127.0.0.1', 60431)\n",
-      "INFO:root:Bajando el nodo, dejando de escuchar en 127.0.0.1 60431\n"
+      "INFO:root:Broadcasting model to all clients...\n"
      ]
     }
    ],
    "source": [
     "from p2pfl.node import Node\n",
-    "from p2pfl.learning.pytorch.datamodules.mnist import MnistFederatedDM\n",
-    "from p2pfl.learning.pytorch.models.mlp import MLP\n",
+    "from p2pfl.learning.pytorch.mnist_examples.mnistfederated_dm import MnistFederatedDM\n",
+    "from p2pfl.learning.pytorch.mnist_examples.models.mlp import MLP\n",
     "from collections import OrderedDict\n",
     "import torch\n",
     "import time\n",
-    "\n",
     "\n",
     "def test_convergence(x):\n",
     "    n,r = x\n",
@@ -82,6 +59,7 @@
     "    # Start Learning\n",
     "    nodes[0].set_start_learning(rounds=r,epochs=0)\n",
     "\n",
+    "    \"\"\"\n",
     "    # Wait 4 results\n",
     "    while True:\n",
     "        time.sleep(1)\n",
@@ -110,154 +88,124 @@
     "    for node in nodes:\n",
     "        node.stop()\n",
     "        time.sleep(.1) #Esperar por la asincronía\n",
-    "\n",
+    "    \"\"\"\n",
+    "    return nodes\n",
     "        \n",
-    "test_convergence((2,2))"
+    "nodes = test_convergence((2,2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7b403c73",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "finish = True\n",
+    "for f in [node.round is None for node in nodes]:\n",
+    "        finish = finish and f# Wait 4 results\n",
+    "\n",
+    "print(finish)\n",
+    "\n",
+    "for node in nodes:\n",
+    "    print(node.round)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "a20b5ced",
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 1,
+   "id": "7a8ae98b",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Train: 54000 Val:6000 Test:10000\n",
-      "Train: 54000 Val:6000 Test:10000\n",
-      "INFO:root:Nodo a la escucha en 127.0.0.1 49992\n",
-      "INFO:root:Nodo a la escucha en 127.0.0.1 49993\n",
-      "INFO:root:Conexión aceptada con ('127.0.0.1', 49992)\n",
-      "INFO:root:Broadcasting start learning...\n",
-      "INFO:root:Training...\n",
+      "INFO:root:Nodo a la escucha en 127.0.0.1 7777\n",
+      "INFO:root:Conexión aceptada con ('127.0.0.1', 52694)\n",
       "INFO:root:Training...\n",
       "INFO:root:Model added (1/2)\n",
-      "INFO:root:Model added (1/2)\n",
       "INFO:root:Broadcasting model to all clients...\n",
-      "INFO:root:Broadcasting model to all clients...\n",
+      "INFO:root:Model initialized\n",
       "INFO:root:Model added (2/2)\n",
       "INFO:root:Agregating models.\n",
-      "INFO:root:Round 1 of 2 finished. (('127.0.0.1', 49993))\n",
+      "INFO:root:Round 1 of 2 finished. (('127.0.0.1', 7777))\n",
       "INFO:root:Training...\n",
       "INFO:root:Model added (1/2)\n",
-      "INFO:root:Broadcasting model to all clients...\n",
-      "ERROR:root:Error decoding parameters\n",
-      "INFO:root:Model added (2/2)\n",
-      "INFO:root:Agregating models.\n",
-      "INFO:root:Round 1 of 2 finished. (('127.0.0.1', 49992))\n",
-      "INFO:root:Training...\n",
-      "INFO:root:Model added (1/2)\n",
-      "INFO:root:Broadcasting model to all clients...\n",
-      "INFO:root:Model added (2/2)\n",
-      "INFO:root:Agregating models.\n",
-      "INFO:root:Round 2 of 2 finished. (('127.0.0.1', 49993))\n",
-      "INFO:root:Finish!!.\n"
+      "INFO:root:Broadcasting model to all clients...\n"
      ]
     }
    ],
    "source": [
-    "from p2pfl.communication_protocol import CommunicationProtocol\n",
-    "from p2pfl.const import HEARTBEAT_FREC, TIEMOUT\n",
-    "from p2pfl.learning.pytorch.datamodules.mnist import MnistFederatedDM\n",
-    "from p2pfl.learning.pytorch.models.mlp import MLP\n",
     "from p2pfl.node import Node\n",
-    "import pytest\n",
-    "import time\n",
+    "from p2pfl.learning.pytorch.mnist_examples.mnistfederated_dm import MnistFederatedDM\n",
+    "from p2pfl.learning.pytorch.mnist_examples.models.mlp import MLP\n",
+    "from collections import OrderedDict\n",
     "import torch\n",
+    "import time\n",
     "\n",
-    "def two_nodes():\n",
-    "    n1 = Node(MLP(),MnistFederatedDM())\n",
-    "    n2 = Node(MLP(),MnistFederatedDM())\n",
-    "    n1.start()\n",
-    "    n2.start()\n",
-    "    return n1,n2\n",
-    "def test_bad_binary_model(two_nodes):\n",
-    "    n1, n2 = two_nodes\n",
-    "    n1.connect_to(n2.host,n2.port)\n",
-    "    time.sleep(0.1) \n",
-    "\n",
-    "    # Start Learning\n",
-    "    n1.set_start_learning(rounds=2,epochs=0)\n",
-    " \n",
-    "    # Adding noise to the buffer\n",
-    "    for _ in range(2000):\n",
-    "        n1.neightboors[0].param_bufffer += \"noise\".encode(\"utf-8\")\n",
-    "    \n",
-    "        \n",
-    "test_bad_binary_model(two_nodes())"
+    "node = Node(MLP(),MnistFederatedDM(),port=7777)\n",
+    "node.start()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5d55c7d2",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "1897a832",
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train: 54000 Val:6000 Test:10000\n",
-      "Train: 54000 Val:6000 Test:10000\n",
-      "INFO:root:Nodo a la escucha en 127.0.0.1 51235\n",
-      "INFO:root:Nodo a la escucha en 127.0.0.1 51239\n",
-      "INFO:root:Conexión aceptada con ('127.0.0.1', 51235)\n",
-      "INFO:root:Broadcasting start learning...\n",
-      "INFO:root:Training...\n",
-      "INFO:root:Training...\n",
-      "INFO:root:Model added (1/2)\n",
-      "INFO:root:Model added (1/2)\n",
-      "INFO:root:Broadcasting model to all clients...\n",
-      "INFO:root:Broadcasting model to all clients...\n",
-      "ERROR:root:Model not matching\n",
-      "ERROR:root:Model not matching\n",
-      "ERROR:root:Model not matching\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from p2pfl.communication_protocol import CommunicationProtocol\n",
-    "from p2pfl.const import HEARTBEAT_FREC, TIEMOUT\n",
-    "from p2pfl.learning.pytorch.datamodules.mnist import MnistFederatedDM\n",
-    "from p2pfl.learning.pytorch.models.cnn import CNN\n",
-    "from p2pfl.learning.pytorch.models.mlp import MLP\n",
-    "from p2pfl.node import Node\n",
-    "import pytest\n",
-    "import time\n",
-    "import torch\n",
-    "\n",
-    "def test_wrong_model():\n",
-    "    n1 = Node(MLP(),MnistFederatedDM())\n",
-    "    n2 = Node(CNN(),MnistFederatedDM())\n",
-    "    n1.start()\n",
-    "    n2.start()\n",
-    "\n",
-    "    n1.connect_to(n2.host,n2.port)\n",
-    "    time.sleep(0.1) \n",
-    "    \n",
-    "    n1.set_start_learning(rounds=2,epochs=0)\n",
-    "    \n",
-    "test_wrong_model()"
+    "node.round"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d0492340",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'12345678'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "msg = \"aa12345678\"\n",
+    "msg.find(\"1\")\n",
+    "msg = msg[2:]\n",
+    "msg"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75a07038",
+   "id": "e5f19602",
    "metadata": {},
    "outputs": [],
    "source": []
