Cambiado flujo de aprendizaje (trainstep + onfinish) y segmentado node

--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -3229,7 +3229,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "638782f7",
+   "id": "d91179f5",
    "metadata": {},
    "outputs": [
     {
@@ -3253,7 +3253,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ca9fa9b9",
+   "id": "272f43b1",
    "metadata": {},
    "outputs": [
     {
@@ -3283,7 +3283,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2f124318",
+   "id": "a2c68ccb",
    "metadata": {
     "scrolled": true
    },
@@ -3373,10 +3373,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "83dd33c4",
+   "execution_count": 1,
+   "id": "cae67426",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "from p2pfl.learning.pytorch.mnist_examples.models.mlp import MLP\n",
@@ -3385,17 +3396,15 @@
     "\n",
     "n1 = Node(MLP(),None)\n",
     "\n",
-    "params = n1.learner.encode_parameters()\n",
+    "n2 = Node(MLP(),None)\n",
     "\n",
-    "with open('paramssog.log','a') as f:\n",
-    "    f.write(str(params))\n",
-    "    f.write(\"\\n\\n\\n\")"
+    "n1.learner.encode_parameters() == n2.learner.encode_parameters() "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "286a7551",
+   "id": "b4544ba3",
    "metadata": {},
    "outputs": [
     {
@@ -3416,7 +3425,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a3265a45",
+   "id": "f7a25ee5",
    "metadata": {},
    "outputs": [
     {
@@ -3437,7 +3446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaf4ae0d",
+   "id": "b8e91273",
    "metadata": {},
    "outputs": [],
    "source": []
