Model testing messages added

--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "de3333e5",
    "metadata": {
     "scrolled": true
@@ -13,18 +13,67 @@
      "output_type": "stream",
      "text": [
       "Train: 54000 Val:6000 Test:10000\n",
-      "INFO:root:Nodo a la escucha en 127.0.0.1 56375\n",
+      "INFO:root:Nodo a la escucha en 127.0.0.1 50763\n",
       "Train: 54000 Val:6000 Test:10000\n",
-      "INFO:root:Nodo a la escucha en 127.0.0.1 49301\n",
-      "INFO:root:(('127.0.0.1', 56375)) Conexión aceptada con ('127.0.0.1', 49301)\n",
-      "INFO:root:(('127.0.0.1', 56375)) Broadcasting start learning...\n",
-      "INFO:root:(('127.0.0.1', 56375)) Sending Initial Model Weights\n",
-      "INFO:root:(('127.0.0.1', 49301)) Broadcasting Number of Samples...\n",
-      "INFO:root:(('127.0.0.1', 49301)) Initialicing Model Weights\n",
-      "INFO:root:(('127.0.0.1', 56375)) Broadcasting model to 1 clients. (size: 548864 bytes)\n",
-      "INFO:root:(('127.0.0.1', 56375)) Broadcasting Number of Samples...\n",
-      "INFO:root:(('127.0.0.1', 49301)) Model initialized\n",
-      "INFO:root:(('127.0.0.1', 56375)) Training...\n"
+      "INFO:root:Nodo a la escucha en 127.0.0.1 55173\n",
+      "INFO:root:(('127.0.0.1', 50763)) Conexión aceptada con ('127.0.0.1', 55173)\n",
+      "INFO:root:(('127.0.0.1', 50763)) Broadcasting start learning...\n",
+      "INFO:root:(('127.0.0.1', 50763)) Sending Initial Model Weights\n",
+      "INFO:root:(('127.0.0.1', 55173)) Broadcasting Number of Samples...\n",
+      "INFO:root:(('127.0.0.1', 55173)) Initialicing Model Weights\n",
+      "INFO:root:(('127.0.0.1', 50763)) Broadcasting model to 1 clients. (size: 548864 bytes)\n",
+      "INFO:root:(('127.0.0.1', 50763)) Broadcasting Number of Samples...\n",
+      "INFO:root:(('127.0.0.1', 50763)) Training...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "GPU available: False, used: False\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "HPU available: False, using: 0 HPUs\n",
+      "\n",
+      "  | Name   | Type     | Params\n",
+      "------------------------------------\n",
+      "0 | metric | Accuracy | 0     \n",
+      "1 | l1     | Linear   | 100 K \n",
+      "2 | l2     | Linear   | 33.0 K\n",
+      "3 | l3     | Linear   | 2.6 K \n",
+      "------------------------------------\n",
+      "136 K     Trainable params\n",
+      "0         Non-trainable params\n",
+      "136 K     Total params\n",
+      "0.544     Total estimated model params size (MB)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:(('127.0.0.1', 55173)) Model initialized\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Sanity Checking: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:(('127.0.0.1', 55173)) Training...\n"
      ]
     },
     {
@@ -64,120 +113,85 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:(('127.0.0.1', 49301)) Training...\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "468199bc00bb4335926aba26bffbd78a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "864fc9eaecb94846825b1fc6524ad4f2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "GPU available: False, used: False\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n",
-      "\n",
-      "  | Name   | Type     | Params\n",
-      "------------------------------------\n",
-      "0 | metric | Accuracy | 0     \n",
-      "1 | l1     | Linear   | 100 K \n",
-      "2 | l2     | Linear   | 33.0 K\n",
-      "3 | l3     | Linear   | 2.6 K \n",
-      "------------------------------------\n",
-      "136 K     Trainable params\n",
-      "0         Non-trainable params\n",
-      "136 K     Total params\n",
-      "0.544     Total estimated model params size (MB)\n"
+      "/home/pedro/.local/share/virtualenvs/federated_learning_p2p-ODhT9q3L/lib/python3.9/site-packages/torchmetrics/utilities/prints.py:36: UserWarning: The ``compute`` method of metric Accuracy was called before the ``update`` method which may lead to errors, as metric states have not yet been updated.\n",
+      "  warnings.warn(*args, **kwargs)\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Sanity Checking: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "93b37493e68c4ddebebc3437d3dd2f60",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Training: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2bad68b9beaf4ccdacab716c494ee191",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Training: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:root:(127.0.0.1:49301) Model added (1/2) from ('127.0.0.1', 49301)\n",
-      "INFO:root:(('127.0.0.1', 49301)) Broadcasting model to 1 clients. (size: 548864 bytes)\n",
-      "INFO:root:(127.0.0.1:56375) Model added (1/2) from ('127.0.0.1', 49301)\n",
-      "INFO:root:(127.0.0.1:56375) Model added (2/2) from ('127.0.0.1', 56375)\n",
-      "INFO:root:(127.0.0.1:56375) Agregating models.\n",
-      "INFO:root:(('127.0.0.1', 56375)) Broadcasting model to 1 clients. (size: 548864 bytes)\n",
-      "INFO:root:(('127.0.0.1', 56375)) Waiting other nodes.\n",
-      "INFO:root:(127.0.0.1:49301) Model added (2/2) from ('127.0.0.1', 56375)\n",
-      "INFO:root:(127.0.0.1:49301) Agregating models.\n",
-      "INFO:root:(('127.0.0.1', 49301)) Waiting other nodes.\n",
-      "INFO:root:(('127.0.0.1', 56375)) Evaluating...\n",
-      "INFO:root:(('127.0.0.1', 49301)) Evaluating...\n"
+      "INFO:root:(127.0.0.1:55173) Model added (1/2) from ('127.0.0.1', 55173)\n",
+      "INFO:root:(('127.0.0.1', 55173)) Broadcasting model to 1 clients. (size: 548864 bytes)\n",
+      "INFO:root:(127.0.0.1:50763) Model added (1/2) from ('127.0.0.1', 55173)\n",
+      "INFO:root:(127.0.0.1:50763) Model added (2/2) from ('127.0.0.1', 50763)\n",
+      "INFO:root:(127.0.0.1:50763) Agregating models.\n",
+      "INFO:root:(('127.0.0.1', 50763)) Broadcasting model to 1 clients. (size: 548864 bytes)\n",
+      "INFO:root:(('127.0.0.1', 50763)) Waiting other nodes.\n",
+      "INFO:root:(127.0.0.1:55173) Model added (2/2) from ('127.0.0.1', 50763)\n",
+      "INFO:root:(127.0.0.1:55173) Agregating models.\n",
+      "INFO:root:(('127.0.0.1', 55173)) Waiting other nodes.\n",
+      "INFO:root:(('127.0.0.1', 50763)) Evaluating...\n",
+      "INFO:root:(('127.0.0.1', 55173)) Evaluating...\n"
      ]
     },
     {
@@ -197,7 +211,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "924b4bfc22c84562837dc70a5c750fd2",
+       "model_id": "1267d5cb0b524d1d956daea7643ea58d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -211,7 +225,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "206e6ed04d5f4ee5abcc6d214d18d492",
+       "model_id": "aae6927f9cb742c8bed582941404ea35",
        "version_major": 2,
        "version_minor": 0
       },
@@ -230,10 +244,13 @@
       "       Test metric             DataLoader 0\n",
       "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
       "        test_loss           0.1545318067073822\n",
-      "       test_metric          0.9361440539360046\n",
+      "       test_metric          0.9243834018707275\n",
       "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "INFO:root:(('127.0.0.1', 56375)) Round 1 of 2 finished.\n",
-      "INFO:root:(('127.0.0.1', 56375)) Training...\n"
+      "(0.1545318067073822, 0.9243834018707275)\n",
+      "INFO:root:(('127.0.0.1', 50763)) Broadcasting metrics to 1 clients.\n",
+      "SIN HACERR!!INFO:root:(('127.0.0.1', 50763)) Round 1 of 2 finished.\n",
+      "\n",
+      "INFO:root:(('127.0.0.1', 50763)) Training...\n"
      ]
     },
     {
@@ -275,7 +292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "939d772f280e48ddb692e5141c2e2a2d",
+       "model_id": "2c383881530d4fa19b2513ea7a77d796",
        "version_major": 2,
        "version_minor": 0
       },
@@ -294,10 +311,13 @@
       "       Test metric             DataLoader 0\n",
       "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
       "        test_loss           0.1545318067073822\n",
-      "       test_metric          0.9309239983558655\n",
+      "       test_metric          0.9195952415466309\n",
       "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "INFO:root:(('127.0.0.1', 49301)) Round 1 of 2 finished.\n",
-      "INFO:root:(('127.0.0.1', 49301)) Training...\n"
+      "(0.1545318067073822, 0.9195952415466309)\n",
+      "INFO:root:(('127.0.0.1', 55173)) Broadcasting metrics to 1 clients.\n",
+      "INFO:root:(('127.0.0.1', 55173)) Round 1 of 2 finished.\n",
+      "SIN HACERR!!\n",
+      "INFO:root:(('127.0.0.1', 55173)) Training...\n"
      ]
     },
     {
@@ -339,7 +359,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e7b435c650542ccb9eebae380d93c23",
+       "model_id": "987608df50324f85bfb5fbe28eaf85cb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -349,132 +369,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:(127.0.0.1:56375) Model added (1/2) from ('127.0.0.1', 56375)\n",
-      "INFO:root:(('127.0.0.1', 56375)) Broadcasting model to 1 clients. (size: 548864 bytes)\n",
-      "INFO:root:(127.0.0.1:49301) Model added (1/2) from ('127.0.0.1', 49301)\n",
-      "INFO:root:(127.0.0.1:49301) Model added (2/2) from ('127.0.0.1', 56375)\n",
-      "INFO:root:(127.0.0.1:49301) Agregating models.\n",
-      "INFO:root:(('127.0.0.1', 49301)) Broadcasting model to 1 clients. (size: 548864 bytes)\n",
-      "INFO:root:(('127.0.0.1', 49301)) Waiting other nodes.\n",
-      "INFO:root:(127.0.0.1:56375) Model added (2/2) from ('127.0.0.1', 49301)\n",
-      "INFO:root:(127.0.0.1:56375) Agregating models.\n",
-      "INFO:root:(('127.0.0.1', 56375)) Waiting other nodes.\n",
-      "INFO:root:(('127.0.0.1', 56375)) Evaluating...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "GPU available: False, used: False\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:(('127.0.0.1', 49301)) Evaluating...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n",
-      "GPU available: False, used: False\n",
-      "HPU available: False, using: 0 HPUs\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50310d566a8940369d28995b9bd9bda3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Testing: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e382aa6a8e8a4161ae68692cc868e0bc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Testing: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "       Test metric             DataLoader 0\n",
-      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "        test_loss           0.0882309079170227\n",
-      "       test_metric          0.9540146589279175\n",
-      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "       Test metric             DataLoader 0\n",
-      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "        test_loss           0.0882309079170227\n",
-      "       test_metric          0.9675413966178894\n",
-      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "INFO:root:(('127.0.0.1', 49301)) Round 2 of 2 finished.\n",
-      "INFO:root:(('127.0.0.1', 56375)) Round 2 of 2 finished.\n",
-      "INFO:root:(('127.0.0.1', 49301)) Finish!!.\n",
-      "INFO:root:(('127.0.0.1', 56375)) Finish!!.\n",
-      "INFO:root:Bajando el nodo, dejando de escuchar en 127.0.0.1 56375 y desconectándose de 1 nodos\n",
-      "DEBUG:root:Closed connection: ('127.0.0.1', 56375)\n",
-      "DEBUG:root:Closed connection: ('127.0.0.1', 49301)\n",
-      "INFO:root:Bajando el nodo, dejando de escuchar en 127.0.0.1 49301 y desconectándose de 0 nodos\n"
-     ]
     }
    ],
    "source": [
@@ -505,7 +399,7 @@
     "        assert len(node.neightboors) == n-1\n",
     "\n",
     "    # Start Learning\n",
-    "    nodes[0].set_start_learning(rounds=r,epochs=1)\n",
+    "    nodes[0].set_start_learning(rounds=r,epochs=0)\n",
     "\n",
     "    # Wait 4 results\n",
     "    while True:\n",
@@ -847,7 +741,7 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "False"
       ]
      },
      "execution_count": 5,
@@ -856,7 +750,7 @@
     }
    ],
    "source": [
-    "Settings.AGREGATION_TIEMOUT"
+    "\"0.1545318067073822\".isdecimal()"
    ]
   },
   {
